--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "better-scroll": "^1.4.2",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
+    "create-keyframe-animation": "^0.1.0",
     "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
